2006-05-03  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* providerDrv.c:
	Fixed 1481081: corrected invocation of addEntry calls for principal.

	* httpAdapter.c:
	Made the debug loop conditional on a variable "breakloop".

2006-03-01  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* sfcbunstage.sh.in: 
	Postfix 1404047: add -n to list of getopt options.

2006-02-28  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* cimXmlRequest.c, httpAdapter.c: 
	Fixed 1440183: Fixed errors in chunked response generation.

	* trace.h: 
	Fixed 1440179: Corrected definition of SFCB_TRACE_START macro.

2006-01-31    <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* cmpidt.h, cmpift.h:
	Fixed 1420604: CMPI header files were not CMPI 1.0 compliant.

	* getSchema.sh.pre.in: 
	Fixed 1420399: getSchema.sh can be customized to deal with
	different CIM Schema versions now. Default is still 2.9.0.

2006-01-30  a3schuur

	* objectImpl.h, objectImplSwapI32toP32.c, sfcbdumpP32onI32.c:
	[1408327] sfcbmof does not support big/little endian in
	cross-compile readjusting ClProperty - removing 8 bytes of filler.

2006-01-27  a3schuur

	* objectImplSwapI32toP32.c: [ 1408327 ] sfcbmof does not support
	big/little endian in cross-compile sectionOffsets not set when
	section is empty.  arrayBufferOffset and strBufOffset not cleared
	when buffer empty.

2006-01-26  mihajlov

	* Makefile.am: Fixed make distcheck problem, syntax error in
	Makefile.am.

2006-01-26  mihajlov

	* man/sfcbrepos.1.pre.in, man/sfcbstage.1.pre.in,
	man/sfcbunstage.1.pre.in: [ 1408327 ] sfcbmof does not support
	big/little endian in cross-compile.  Updated man pages.

2006-01-26  mihajlov

	* mofc/mofparse.c: Enhancement: allow multiple backend options to
	be specified.

2006-01-26  mihajlov

	* sfcbdumpP32onI32.c: Minor: fixed incorrect parameter passing.

2006-01-26  mihajlov

	* sfcbdump.c, sfcbdumpP32onI32.c: Minor: removed compile warning.
